# vj

./: README.kr.md  README.md  pyproject.toml
src/jet/: __init__.py  app.py  editor.py
src/jets/: __init__.py  __main__.py  app.py  app.tcss  editor.py
src/jets/data/: help.json  sample.json
src/jvim/: __init__.py  __main__.py  _fold.py  _jsonpath.py  _search.py  _substitute.py  _visual.py  app.py  diff.py  diff_app.py  diff_app.tcss  differ.py  differ.tcss  editor.py  widget.py
src/jvim/data/: help.json
src/vj/: editor.py
tests/: test_diff.py  test_editor.py
