[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jets"
version = "0.1.0"
description = "JSON Editor in Textual"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
]

[project.scripts]
jet = "jet.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
