[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jvim"
version = "0.1.2"
description = "JSON editor with vim-style keybindings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kihyun Kim", email = "k2hyun@gmail.com" }
]
keywords = ["json", "editor", "vim", "tui", "textual", "jsonl", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
]

[project.scripts]
jvim = "jvim.app:main"
jvi = "jvim.app:main"
jv = "jvim.app:main"

[project.urls]
Homepage = "https://github.com/k2hyun/jvim"
Repository = "https://github.com/k2hyun/jvim"
Issues = "https://github.com/k2hyun/jvim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jvim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
